[package]
name = "gguf-rs"
version = "0.1.3"
description = "GGUF file parser"
edition = "2024"
license = "MIT"
authors = ["Zack Shen <zackshen0526@gmail.com>"]
keywords = ["gguf", "parser", "GPT", "llama", "llm"]
repository = "https://github.com/zackshen/gguf"
homepage = "https://github.com/zackshen/gguf"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
clap = { version = "4.5.38", features = ["derive"] }
comfy-table = "7.1.4"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["arbitrary_precision"] }
simple_logger = "5.0.0"


[features]
default = []
debug = []
