[package]
name = "gguf-rs"
version = "0.1.7"
description = "GGUF file parser"
edition = "2021"
license = "MIT"
authors = ["Zack Shen <zackshen0526@gmail.com>"]
keywords = ["gguf", "parser", "GPT", "llama", "llm"]
repository = "https://github.com/zackshen/gguf"
homepage = "https://github.com/zackshen/gguf"
include = ["src/**/*", "README.md"]
categories = ["parser-implementations", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
byteorder = "1.5.0"
clap = { version = "4.5.58", features = ["derive"] }
comfy-table = "7.2.2"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }
simple_logger = "5.0.1"


[features]
default = []
debug = []
